# MiMoLo

./: .gitignore  CHANGELOG.md  FIELD_AGENT_ARCHITECTURE.md  GETTING_STARTED.md  README.md  export_repo_markdown.py  mimolo.toml  mml.ps1  mml.sh  mml.toml  package-lock.json  pyproject.toml  repo_export.md  security_best_practices_report.md  start_control_dev.ps1  start_control_dev.sh  start_monitor.bat  test_logging_manual.py
.claude/: settings.local.json
.codebase_export/: export_repo_markdown.py  repo_export.md
developer_docs/: 1_Core_Overview.md  2_Core_Concepts.md  3_Architectural_Overview.md  4_Data_Schema_and_Message_Types.md  5_Lifecycle_and_Control_Flow.md  6_Extensibility_and_Plugin_Development.md  7_Constraints_and_Performance_Etiquette.md  8_Future_Roadmap_and_Summary.md  ASM_Development_Documentation.md  CHANGELOG.md  MiMoLo Field-Agent Protocol Specification (v0.3).md  REMOTE_SSH_SETUP.md  TERMINOLOGY_MAP.md  Untitled.md  security_agent.md
developer_docs/archive/: README.md  (+1 more)
mimolo/: __init__.py  cli.py
mimolo-control/: README.md  package-lock.json  package.json
mimolo-dash/: README.md  package-lock.json  package.json
scripts/: bootstrap_runtime.sh  bundle_app.ps1  bundle_app.sh  deploy_portable.ps1  deploy_portable.sh  install_dev_tools_windows.ps1  qc_exception_scan.py
tests/: __init__.py  test_agent_activity_signal_contract.py  test_agent_debug.py  test_agent_process.py  test_aggregate.py  test_cli_commands.py  test_cli_env_overrides.py  test_cli_sigterm.py  test_client_folder_activity_agent.py  test_common_paths.py  test_config_extra.py  test_cooldown.py  test_event.py  test_ipc_support.py  test_logging_integration.py  test_ops_singleton.py  test_plugin_spec_and_adapter.py  test_plugin_store.py  test_plugins_example.py  test_protocol_parse.py  test_registry.py  test_runtime_helpers.py  test_runtime_monitor_settings_ipc.py  test_runtime_orchestrator_control_ipc.py  test_runtime_plugin_install_ipc.py  test_runtime_template_discovery.py  test_runtime_widget_ipc_stubs.py  test_screen_tracker_agent.py  test_sink_permissions.py  test_sink_variants.py
(+212 files in other folders)
